Added create IBD function

--- a/README.Rmd
+++ b/README.Rmd
@@ -32,6 +32,10 @@ pak::pak("jonotuke/spIBDerverse")
 
 ## Example
 
+```{r}
+vignette("basic-analysis")
+```
+
 This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
