--- a/README.Rmd
+++ b/README.Rmd
@@ -32,9 +32,8 @@ pak::pak("jonotuke/spIBDerverse")
 
 ## Example
 
-```{r}
-vignette("basic-analysis")
-```
+`vignette("basic-analysis")`
+
 
 This is a basic example which shows you how to solve a common problem:
 
