--- a/vignettes/basic-analysis.qmd
+++ b/vignettes/basic-analysis.qmd
@@ -14,6 +14,10 @@ knitr::opts_chunk$set(
 )
 ```
 
+```{r}
+library(spIBDerverse)
+```
+
 # Data
 The fundemental object for the `spIBDerverse` package is the IBD network. You are create this using two `TSV` files. 
 
@@ -62,7 +66,7 @@ We convert these to an IBD network with
 
 
 ```{r}
-ibd_network <- spIBDerverse::create_ibd_network(
+ibd_network <- create_ibd_network(
   ibd_file,
   meta_file,
   ibd_co = c(0, 2, 1, 0),
