--- a/README.Rmd
+++ b/README.Rmd
@@ -32,13 +32,70 @@ pak::pak("jonotuke/spIBDerverse")
 
 ## Example
 
-`vignette("basic-analysis")`
-
-
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
+```{r}
 library(spIBDerverse)
-## basic example code
 ```
+
+# Data
+The fundemental object for the `spIBDerverse` package is the IBD network. You are create this using two `TSV` files. 
+
+## IBD dataset (edge info)
+The first file is the IBD file. It should have the following headers. 
+
+```{r}
+#| echo: false
+#| output: asis
+ibd_file <- fs::path_package(
+  "extdata",
+  "example-ibd-data.tsv",
+  package = "spIBDerverse"
+) |>
+  readr::read_lines()
+colnames <- ibd_file[1] |> stringr::str_split("\t") |> purrr::pluck(1)
+for (i in colnames) {
+  cat("- ", i, "\n")
+}
+```
+
+## Meta dataset (node info)
+The next file needed is the meta file. This can contain any meta-data about the samples, but needs two columns:
+
+1. `iid` this has the sample IDs and must have an entry for each of the IDs mentioned in the `iid1` and `iid2` column of the IBD file. 
+2. A `frac_gp` column. 
+
+## Creating the IBD network. 
+There are example files within the `spIBDerverse` package that can be used as an example. These can be obtained with 
+
+
+```{r}
+ibd_file <- fs::path_package(
+  "extdata",
+  "example-ibd-data.tsv",
+  package = "spIBDerverse"
+)
+meta_file <- fs::path_package(
+  "extdata",
+  "example-meta-data.tsv",
+  package = "spIBDerverse"
+)
+```
+
+We convert these to an IBD network with 
+
+
+```{r}
+ibd_network <- create_ibd_network(
+  ibd_file,
+  meta_file,
+  ibd_co = c(0, 2, 1, 0),
+  frac_co = 0.49
+)
+```
+
+
+```{r}
+ibd_network
+```
+
+
 
