Testing vignette and windows release

--- a/vignettes/homophily-measures.Rmd
+++ b/vignettes/homophily-measures.Rmd
@@ -17,3 +17,20 @@ knitr::opts_chunk$set(
 ```{r setup}
 library(spIBDerverse)
 ```
+
+```{r}
+library(igraph)
+```
+
+In this vignette, we look at a method to identify edges that are more prominent than expected if the nodes attributes had not effect on the probability of an edge. 
+
+Consider a network with $N$ nodes and $E$ edges. From this, we get that the probability at two randomly selected nodes have an edge connected them is 
+
+$$
+p_{ij} = \frac{E}{{N \choose 2}}
+$$
+
+```{r}
+obs <- example_network |> get_ringbauer_measures("site")
+```
+
